--- a/notebook/validate.ipynb
+++ b/notebook/validate.ipynb
@@ -2,49 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np \n",
     "from scipy import stats\n",
     "rng = np.random.default_rng()\n",
-    "target1 = stats.uniform.rvs(size=100, random_state=rng)\n",
-    "target2 = stats.norm.rvs(size=110, random_state=rng)\n",
+    "sample1 = stats.uniform.rvs(size=100, random_state=rng)\n",
+    "sample2 = stats.norm.rvs(size=110, random_state=rng)\n",
     "response = stats.ks_2samp(sample1, sample2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.06118741, 0.79091241, 0.88428105, 0.46900139, 0.80165184,\n",
-       "       0.22756687, 0.1815065 , 0.04081242, 0.13030395, 0.23322502,\n",
-       "       0.01890453, 0.0740686 , 0.20781342, 0.08091203, 0.35902641,\n",
-       "       0.28925138, 0.66993667, 0.57425905, 0.35614064, 0.89684646,\n",
-       "       0.30228768, 0.91312207, 0.36449874, 0.66012493, 0.57133132,\n",
-       "       0.48222701, 0.99062541, 0.91608477, 0.25649564, 0.92343104,\n",
-       "       0.13304209, 0.37905749, 0.91383654, 0.19936823, 0.92328545,\n",
-       "       0.37083674, 0.31150459, 0.61183553, 0.72913719, 0.42431548,\n",
-       "       0.01038363, 0.59845302, 0.9266065 , 0.21037822, 0.07501937,\n",
-       "       0.43085711, 0.73487116, 0.980593  , 0.49767548, 0.83886436,\n",
-       "       0.73411472, 0.17704318, 0.11005898, 0.77790292, 0.99692003,\n",
-       "       0.50652553, 0.48212606, 0.35470243, 0.96351754, 0.92719389,\n",
-       "       0.46901759, 0.6234821 , 0.92932701, 0.80097735, 0.3073514 ,\n",
-       "       0.98593484, 0.52691993, 0.25278228, 0.81260867, 0.80697441,\n",
-       "       0.89622397, 0.94398548, 0.55684546, 0.29909013, 0.64285107,\n",
-       "       0.47046154, 0.75194752, 0.33535312, 0.38499463, 0.20798482,\n",
-       "       0.97123477, 0.12334796, 0.32771866, 0.6035316 , 0.46131954,\n",
-       "       0.38373939, 0.77384262, 0.66427009, 0.36419963, 0.42253506,\n",
-       "       0.77674088, 0.37874757, 0.67220591, 0.4304611 , 0.30892227,\n",
-       "       0.75421181, 0.43801919, 0.47795031, 0.35131136, 0.83706827])"
+       "array([0.44469038, 0.69946927, 0.67723146, 0.52105225, 0.37257775,\n",
+       "       0.50734418, 0.50359128, 0.90615807, 0.31650299, 0.30912245,\n",
+       "       0.64906819, 0.59798402, 0.66507101, 0.71761377, 0.43875013,\n",
+       "       0.01833886, 0.22315548, 0.84684124, 0.31474239, 0.44777546,\n",
+       "       0.902636  , 0.16619521, 0.27654064, 0.28687582, 0.11004712,\n",
+       "       0.40525482, 0.73821874, 0.60887522, 0.45191127, 0.62700354,\n",
+       "       0.22866442, 0.95470112, 0.84888786, 0.73692623, 0.77507634,\n",
+       "       0.36311054, 0.95113344, 0.01195536, 0.67157379, 0.24172485,\n",
+       "       0.49671369, 0.4725205 , 0.99071678, 0.67937145, 0.6330954 ,\n",
+       "       0.42869652, 0.46563274, 0.49638387, 0.02867857, 0.7985478 ,\n",
+       "       0.54978941, 0.15013099, 0.83186857, 0.04852599, 0.24761104,\n",
+       "       0.13843884, 0.80125236, 0.26210289, 0.42817547, 0.88649176,\n",
+       "       0.1456601 , 0.50264378, 0.58061397, 0.95650658, 0.79722861,\n",
+       "       0.623912  , 0.81380017, 0.87444344, 0.0541413 , 0.18128754,\n",
+       "       0.56457752, 0.72415756, 0.87175699, 0.24764412, 0.45192773,\n",
+       "       0.11670598, 0.43030909, 0.36883532, 0.15385595, 0.50434086,\n",
+       "       0.90336501, 0.47081251, 0.23008218, 0.69323516, 0.31826898,\n",
+       "       0.50820261, 0.40230438, 0.60522202, 0.13971703, 0.88070719,\n",
+       "       0.78219064, 0.59487842, 0.44800056, 0.9335145 , 0.06537973,\n",
+       "       0.13602693, 0.96751691, 0.08368062, 0.14837457, 0.43670856])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,37 +55,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-0.68626802,  0.37005447,  0.21959141, -1.57060979,  0.36913016,\n",
-       "        1.28137189, -1.23636329, -1.42152311,  1.18279138, -0.72963228,\n",
-       "        0.33345873,  1.91828745, -0.11420401, -0.24105416,  0.5066065 ,\n",
-       "       -0.89109633,  2.69719629,  1.09044039,  0.61806957,  0.58083524,\n",
-       "        0.3806604 , -0.29440562,  0.11994397, -1.11740532, -0.259063  ,\n",
-       "        1.41132785,  0.27786904, -0.40764675, -1.55145696,  1.79293649,\n",
-       "       -0.36006887, -0.16279354,  0.57456299,  0.18243056, -0.48522324,\n",
-       "        0.21355842, -0.24604782,  0.24044453, -0.73688238,  1.4803847 ,\n",
-       "       -0.82003208, -0.47630338, -0.16853134, -0.17244547, -0.0943154 ,\n",
-       "       -1.25515001, -0.47014131,  0.15134699, -1.53592894,  0.34880247,\n",
-       "       -0.71587249,  0.01257353,  0.8224983 , -0.83626558,  0.75405763,\n",
-       "       -1.38541274, -0.49878086, -0.11281432,  2.11309818,  1.72289206,\n",
-       "       -0.62120185,  0.7161297 ,  1.31761802, -0.31687802, -1.08567922,\n",
-       "       -1.85903228,  0.95747215,  0.69669242, -0.83061017,  0.39864669,\n",
-       "       -0.22596438, -0.80416864,  0.71348672,  1.08751178,  0.05040909,\n",
-       "        1.07115711, -0.13774234,  0.39112764, -0.19651755,  0.65087721,\n",
-       "       -0.09067342, -1.2761317 ,  0.3202754 ,  0.51596324,  1.08203669,\n",
-       "       -0.26646269, -0.9817592 , -0.51304076, -1.02504127, -0.83568945,\n",
-       "       -0.78867836, -2.1445441 , -0.78659603, -0.78984427, -0.27097216,\n",
-       "       -1.44567136,  0.99994362, -0.28531753,  0.58171642,  2.29490265,\n",
-       "       -0.82185984, -0.30623844,  1.08252945, -0.66876257,  0.02694228,\n",
-       "       -0.82469038,  1.02666277, -0.5194208 , -0.23723234, -0.9353035 ])"
+       "array([ 0.04266673, -1.50927802,  0.50433827, -2.60562808, -1.6006908 ,\n",
+       "       -0.43908134, -0.57320888, -0.73641757, -0.72123118, -1.56686654,\n",
+       "       -1.13602428,  0.49905484,  0.23361765,  1.09824201, -1.0156231 ,\n",
+       "        1.04503119,  0.42935928,  0.61820486, -1.47206951,  0.00760314,\n",
+       "       -0.50024894,  1.3584657 ,  0.2512371 , -1.98185466,  1.17109816,\n",
+       "        0.76007027,  1.18061998, -0.13954238,  0.17393426, -0.0584867 ,\n",
+       "       -1.47751006,  1.35902917,  1.79790329,  0.3873649 ,  1.7185214 ,\n",
+       "       -0.14204724,  0.14886862, -0.43083459,  0.41720264,  0.19010389,\n",
+       "       -2.43546522, -0.54771972,  0.18487976, -0.15529495, -0.190289  ,\n",
+       "       -0.15215377, -0.14817588,  0.08186198, -0.5948784 ,  0.36557448,\n",
+       "       -0.72626152,  1.12957655,  0.31558023, -0.19059306,  0.75958831,\n",
+       "        0.66076501, -0.56131281, -0.43011424,  1.90050059,  0.3829828 ,\n",
+       "        1.180489  , -0.7166016 ,  0.27707436, -0.56761636,  0.17486681,\n",
+       "        1.20510111,  0.16441902, -0.96590567,  1.13448319, -0.88271639,\n",
+       "       -1.17640536, -1.45261427, -0.81625016,  0.9061199 ,  0.43495074,\n",
+       "       -0.38459538,  0.58847502,  0.61954383, -0.21044804, -0.96163652,\n",
+       "       -1.26197835,  0.81373161, -0.03263986,  0.46214449, -0.91227203,\n",
+       "       -0.75213136, -1.16014067, -0.63734445, -0.11180149,  0.64359211,\n",
+       "       -1.52748314, -0.28962461, -1.536498  , -0.0247502 ,  0.73544803,\n",
+       "       -0.41564652, -0.77288908,  0.35439244, -0.09493936,  0.55568551,\n",
+       "        0.79430755,  1.37813448, -0.78686688, -1.59711442, -0.10891358,\n",
+       "        0.09019893, -0.41507628, -0.11773864,  0.89701965,  1.69783199])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,16 +96,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.3e-15"
+       "2.34e-14"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,9 +116,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2229076108.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[18], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    2. Missing COlumns\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "#Anomly in my dataset\n",
     "#\n",
@@ -131,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +149,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 4\n",
+      "2 5\n",
+      "3 6\n",
+      "4 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1=[1,2,3,4]\n",
+    "l2=[4,5,6,7]\n",
+    "\n",
+    "for l1_val,l2_val in zip(l1,l2):\n",
+    "\n",
+    "    print(l1_val,l2_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,20 +183,303 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2943059453.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    (df.isnull().sum()/df.shape[0]).(df.isnull().sum()/df.shape[0]).\u001b[0m\n\u001b[0m                                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "class 0.0\n",
+      "aa_000 0.0\n",
+      "ab_000 77.01554404145078\n",
+      "ac_000 5.882556131260794\n",
+      "ad_000 25.537132987910187\n",
+      "ae_000 4.341968911917098\n",
+      "af_000 4.341968911917098\n",
+      "ag_000 1.0431778929188256\n",
+      "ag_001 1.0431778929188256\n",
+      "ag_002 1.0431778929188256\n",
+      "ag_003 1.0431778929188256\n",
+      "ag_004 1.0431778929188256\n",
+      "ag_005 1.0431778929188256\n",
+      "ag_006 1.0431778929188256\n",
+      "ag_007 1.0431778929188256\n",
+      "ag_008 1.0431778929188256\n",
+      "ag_009 1.0431778929188256\n",
+      "ah_000 1.132987910189983\n",
+      "ai_000 1.1122625215889466\n",
+      "aj_000 1.1122625215889466\n",
+      "ak_000 7.658031088082902\n",
+      "al_000 1.1295336787564767\n",
+      "am_0 1.1122625215889466\n",
+      "an_000 1.1295336787564767\n",
+      "ao_000 1.0086355785837653\n",
+      "ap_000 1.1295336787564767\n",
+      "aq_000 1.0086355785837653\n",
+      "ar_000 4.746113989637306\n",
+      "as_000 1.1122625215889466\n",
+      "at_000 1.1122625215889466\n",
+      "au_000 1.1122625215889466\n",
+      "av_000 4.3454231433506045\n",
+      "ax_000 4.34887737478411\n",
+      "ay_000 1.0431778929188256\n",
+      "ay_001 1.0431778929188256\n",
+      "ay_002 1.0431778929188256\n",
+      "ay_003 1.0431778929188256\n",
+      "ay_004 1.0431778929188256\n",
+      "ay_005 1.0431778929188256\n",
+      "ay_006 1.0431778929188256\n",
+      "ay_007 1.0431778929188256\n",
+      "ay_008 1.0431778929188256\n",
+      "ay_009 1.0431778929188256\n",
+      "az_000 1.0431778929188256\n",
+      "az_001 1.0431778929188256\n",
+      "az_002 1.0431778929188256\n",
+      "az_003 1.0431778929188256\n",
+      "az_004 1.0431778929188256\n",
+      "az_005 1.0431778929188256\n",
+      "az_006 1.0431778929188256\n",
+      "az_007 1.0431778929188256\n",
+      "az_008 1.0431778929188256\n",
+      "az_009 1.0431778929188256\n",
+      "ba_000 1.067357512953368\n",
+      "ba_001 1.067357512953368\n",
+      "ba_002 1.067357512953368\n",
+      "ba_003 1.067357512953368\n",
+      "ba_004 1.067357512953368\n",
+      "ba_005 1.067357512953368\n",
+      "ba_006 1.067357512953368\n",
+      "ba_007 1.067357512953368\n",
+      "ba_008 1.067357512953368\n",
+      "ba_009 1.067357512953368\n",
+      "bb_000 1.132987910189983\n",
+      "bc_000 4.753022452504318\n",
+      "bd_000 4.756476683937824\n",
+      "be_000 4.352331606217617\n",
+      "bf_000 4.341968911917098\n",
+      "bg_000 1.1295336787564767\n",
+      "bh_000 1.1295336787564767\n",
+      "bi_000 1.0086355785837653\n",
+      "bj_000 1.0086355785837653\n",
+      "bk_000 38.29015544041451\n",
+      "bl_000 45.27115716753023\n",
+      "bm_000 65.76511226252158\n",
+      "bn_000 73.04663212435233\n",
+      "bo_000 76.83592400690846\n",
+      "bp_000 79.04317789291882\n",
+      "bq_000 80.71157167530224\n",
+      "br_000 81.58203799654576\n",
+      "bs_000 1.229706390328152\n",
+      "bt_000 0.2694300518134715\n",
+      "bu_000 1.1813471502590673\n",
+      "bv_000 1.1813471502590673\n",
+      "bx_000 5.1882556131260795\n",
+      "by_000 0.7806563039723662\n",
+      "bz_000 4.746113989637306\n",
+      "ca_000 7.588946459412781\n",
+      "cb_000 1.229706390328152\n",
+      "cc_000 5.184801381692574\n",
+      "cd_000 1.1640759930915372\n",
+      "ce_000 4.352331606217617\n",
+      "cf_000 25.537132987910187\n",
+      "cg_000 25.537132987910187\n",
+      "ch_000 25.537132987910187\n",
+      "ci_000 0.5941278065630398\n",
+      "cj_000 0.5941278065630398\n",
+      "ck_000 0.5941278065630398\n",
+      "cl_000 15.965457685664939\n",
+      "cm_000 16.556131260794473\n",
+      "cn_000 1.063903281519862\n",
+      "cn_001 1.063903281519862\n",
+      "cn_002 1.063903281519862\n",
+      "cn_003 1.063903281519862\n",
+      "cn_004 1.063903281519862\n",
+      "cn_005 1.063903281519862\n",
+      "cn_006 1.063903281519862\n",
+      "cn_007 1.063903281519862\n",
+      "cn_008 1.063903281519862\n",
+      "cn_009 1.063903281519862\n",
+      "co_000 25.537132987910187\n",
+      "cp_000 4.7495682210708114\n",
+      "cq_000 1.1813471502590673\n",
+      "cr_000 77.01554404145078\n",
+      "cs_000 1.0397236614853196\n",
+      "cs_001 1.0397236614853196\n",
+      "cs_002 1.0397236614853196\n",
+      "cs_003 1.0397236614853196\n",
+      "cs_004 1.0397236614853196\n",
+      "cs_005 1.0397236614853196\n",
+      "cs_006 1.0397236614853196\n",
+      "cs_007 1.0397236614853196\n",
+      "cs_008 1.0397236614853196\n",
+      "cs_009 1.0397236614853196\n",
+      "ct_000 23.74093264248705\n",
+      "cu_000 23.74093264248705\n",
+      "cv_000 23.74093264248705\n",
+      "cx_000 23.74093264248705\n",
+      "cy_000 23.74093264248705\n",
+      "cz_000 23.74093264248705\n",
+      "da_000 23.74093264248705\n",
+      "db_000 23.74093264248705\n",
+      "dc_000 23.74093264248705\n",
+      "dd_000 4.355785837651123\n",
+      "de_000 4.7495682210708114\n",
+      "df_000 6.946459412780656\n",
+      "dg_000 6.946459412780656\n",
+      "dh_000 6.946459412780656\n",
+      "di_000 6.939550949913645\n",
+      "dj_000 6.94300518134715\n",
+      "dk_000 6.94300518134715\n",
+      "dl_000 6.946459412780656\n",
+      "dm_000 6.949913644214162\n",
+      "dn_000 1.1813471502590673\n",
+      "do_000 4.7495682210708114\n",
+      "dp_000 4.756476683937824\n",
+      "dq_000 4.756476683937824\n",
+      "dr_000 4.753022452504318\n",
+      "ds_000 4.756476683937824\n",
+      "dt_000 4.756476683937824\n",
+      "du_000 4.753022452504318\n",
+      "dv_000 4.753022452504318\n",
+      "dx_000 4.746113989637306\n",
+      "dy_000 4.7495682210708114\n",
+      "dz_000 4.746113989637306\n",
+      "ea_000 4.746113989637306\n",
+      "eb_000 6.94300518134715\n",
+      "ec_00 17.17789291882556\n",
+      "ed_000 15.965457685664939\n",
+      "ee_000 1.0431778929188256\n",
+      "ee_001 1.0431778929188256\n",
+      "ee_002 1.0431778929188256\n",
+      "ee_003 1.0431778929188256\n",
+      "ee_004 1.0431778929188256\n",
+      "ee_005 1.0431778929188256\n",
+      "ee_006 1.0431778929188256\n",
+      "ee_007 1.0431778929188256\n",
+      "ee_008 1.0431778929188256\n",
+      "ee_009 1.0431778929188256\n",
+      "ef_000 4.7495682210708114\n",
+      "eg_000 4.746113989637306\n"
      ]
     }
    ],
    "source": [
-    "(df.isnull().sum()/df.shape[0]).(df.isnull().sum()/df.shape[0])."
+    "drop_column_names=[]\n",
+    "for column_name,missing_percentage in zip((df.isnull().sum()/df.shape[0]).index, (df.isnull().sum()/df.shape[0]).values):\n",
+    "    print(column_name,missing_percentage*100)\n",
+    "    if missing_percentage>0.3:\n",
+    "        drop_column_names.append(column_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ab_000',\n",
+       " 'bk_000',\n",
+       " 'bl_000',\n",
+       " 'bm_000',\n",
+       " 'bn_000',\n",
+       " 'bo_000',\n",
+       " 'bp_000',\n",
+       " 'bq_000',\n",
+       " 'br_000',\n",
+       " 'cr_000']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "drop_column_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "null_report = df.isna().sum()/df.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ab_000    0.770155\n",
+       "bk_000    0.382902\n",
+       "bl_000    0.452712\n",
+       "bm_000    0.657651\n",
+       "bn_000    0.730466\n",
+       "bo_000    0.768359\n",
+       "bp_000    0.790432\n",
+       "bq_000    0.807116\n",
+       "br_000    0.815820\n",
+       "cr_000    0.770155\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "null_report[null_report>0.3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['ab_000', 'bk_000', 'bl_000', 'bm_000', 'bn_000', 'bo_000', 'bp_000',\n",
+       "       'bq_000', 'br_000', 'cr_000'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "null_report[null_report>0.3].index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df.iloc[:,[0]].drop(\"class\",axis=1).columns)"
    ]
   },
   {
